--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f69266ba150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9ee3f9c850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f692699bb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f692699b550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ee3cb8ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9ee3cb8f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6926f2b310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6926f2b490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ee42563d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9ee42565d0&gt;]</pre>
 </div>
 
 </div>
