--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fecc20c1510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdc1106e2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fecc23c4f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fecc23c4650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc11374450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc11374990&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fecc295a4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fecc295a6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc1190b310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc1190b510&gt;]</pre>
 </div>
 
 </div>
