--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ccf8e9a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f61e19bf9d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ccf5c9a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ccf5c9f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61e1dd9c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61e1dd9050&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ccfb57310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ccfb57510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61e23684d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61e23686d0&gt;]</pre>
 </div>
 
 </div>
