--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f075eaafbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa294da24d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f075eec1ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f075eec1cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa294709f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa294709550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f075f457410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f075f457610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa294cb8210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa294cb8410&gt;]</pre>
 </div>
 
 </div>
