--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa294da24d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6f2b26c810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa294709f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa294709550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f2abd6990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6f2abd6550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa294cb8210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa294cb8410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f2b182350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6f2b182550&gt;]</pre>
 </div>
 
 </div>
