--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a8dbe1c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7642160490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a8df2e150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a8df2ef10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7642591150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7642591ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a8e4c4490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a8e4c4690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7642b26490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7642b26690&gt;]</pre>
 </div>
 
 </div>
