--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f465814d690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c81ed99d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4658433b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4658433d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c8219ebd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c8219edd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46589db6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46589db910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c82746550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c82746750&gt;]</pre>
 </div>
 
 </div>
