--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c81ed99d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd203aecd50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c8219ebd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c8219edd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd203de7f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd203de7510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c82746550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c82746750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd204383550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd204383750&gt;]</pre>
 </div>
 
 </div>
