--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fea91fb6b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f87b6bd1b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fea91c8dd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fea91c8d0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f87b6c0e810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f87b6c0e790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fea92225290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fea92225490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f87b719c410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f87b719c610&gt;]</pre>
 </div>
 
 </div>
