--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a4f888d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f91d9320390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a4fc92890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a4fc92d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91d9630650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91d9630550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a502403d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a502405d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91d9bbe6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91d9bbe8d0&gt;]</pre>
 </div>
 
 </div>
