--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f91d9320390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f970a6a52d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f91d9630650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f91d9630550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f970a9f0e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f970a9f0050&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f91d9bbe6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f91d9bbe8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f970af7f390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f970af7f590&gt;]</pre>
 </div>
 
 </div>
