--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4da2b8f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd653b0a310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4da5bec50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4da5bef10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd652c40a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd652c40410&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4dab543d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4dab545d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6531dc5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6531dc7d0&gt;]</pre>
 </div>
 
 </div>
