--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7afce8050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc2321cacd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7affeb390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7affeb090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2325dbc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc2325db1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7b05785d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7b0578810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc232b70510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc232b70710&gt;]</pre>
 </div>
 
 </div>
