--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8475d11ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3863e1b0d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8476014d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8476014f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3864115550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38641151d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f84765bb550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f84765bb750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38646b4550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38646b4750&gt;]</pre>
 </div>
 
 </div>
