--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc61257c0d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feafa8c8750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc612877e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc6128772d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feafabaf950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feafabaf590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc612e15410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc612e15610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feafb13e390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feafb13e590&gt;]</pre>
 </div>
 
 </div>
