--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feafa8c8750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdbd9f08410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feafabaf950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feafabaf590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdbd98760d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdbd98763d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feafb13e390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feafb13e590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdbd9e381d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdbd9e383d0&gt;]</pre>
 </div>
 
 </div>
