--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f424c838650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4561b04d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f424cb16ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f424cb16850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4564a3bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4564a3dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f424d0bd4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f424d0bd6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe456a4c4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe456a4c6d0&gt;]</pre>
 </div>
 
 </div>
