--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1d01e7f610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f61f20e1390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d0214ebd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1d0214ed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61f213aa50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61f213ae50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d026f84d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1d026f8690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61f26cf450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61f26cf650&gt;]</pre>
 </div>
 
 </div>
