--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4ea01dbe90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c8d732110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e9fec9b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e9fec9990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c8d3e1310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c8d3e1090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ea045a210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ea045a410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c8d970490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c8d970690&gt;]</pre>
 </div>
 
 </div>
